infrastructure/microservices-stack-deployment/templates/products-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-deploy-products-service
  namespace: default
spec:
  selector:
    app: products-service
  ports:
    - port: 443
      targetPort: 443
    - port: 80
      targetPort: 80
  type: ClusterIP
