infrastructure/microservices-stack-deployment/templates/products-service-deployment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "app.products-service.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: products-service
                port:
                  number: 8080
